--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,6 +2,23 @@ body {
   background-color: #1f262d;
 }
 
+.main-section {
+  display: flex;
+}
+
+#game-field {
+  display: flex;
+  width: 80%;
+}
+
+.game-field {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2px;
+}
+
 .object-body {
   width: 100%;
   height: 100%;
@@ -20,13 +37,7 @@ body {
   text-align: center;
 }
 
-.game-field {
-  width: 1200px;
-  height: auto;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2px;
-}
+
 
 .game-field-row {
   width: 100%;
