--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,15 @@
 body {
-  background-color: #1f262d;
+  background-color: #000;
+}
+
+.root {
+  margin: 0 auto;
+
+}
+
+canvas {
+  margin: 0 auto;
+  display: block;
 }
 
 .main-section {
