rename init-map to location-manager.ts and rename the class MapManager to LocationManager and upgrade this class

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,9 +6,11 @@ body {
   margin: 0 auto;
 }
 
-canvas {
+canvas#main-canvas {
+
   margin: 0 auto;
   display: block;
+  /* display: none; */
 }
 
 .main-section {
